縦横を正しく認識出来ない画像に対応

--- a/PhotoExcel/PhotoExcel.vbproj
+++ b/PhotoExcel/PhotoExcel.vbproj
@@ -207,6 +207,7 @@
   <ItemGroup>
     <AppDesigner Include="My Project\" />
     <Compile Include="JpegResize.vb" />
+    <Compile Include="JpegRotate.vb" />
     <Compile Include="Photo.vb" />
     <Compile Include="Ribbon1.designer.vb">
       <DependentUpon>Ribbon1.vb</DependentUpon>
